Added reference for min-cost flow algorithm

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,11 @@
+@article{goldberg1993implementing,
+  title={On Implementing Scaling Push-Relabel Algorithms},
+  author={Goldberg, Andrew V and Kharitonov, Michael},
+  journal={Network Flows and Matching: First DIMACS Implementation Challenge},
+  year={1993},
+  publisher={American Mathematical Soc.}
+}
+
 @inproceedings{domain_sizing,
   author={Sankaran, Ganesh C. and Sivalingam, Krishna M.},
   booktitle={{IEEE International Conference on Cloud Networking (CloudNet)}}, 
