--- a/reference.bib
+++ b/reference.bib
@@ -403,8 +403,8 @@
 
 @inproceedings{liu2015scheduling,
   title={{Scheduling techniques for hybrid circuit/packet networks}},
-  author={Liu, He and Mukerjee, Matthew K and Li, Conglong and Feltman, Nicolas and Papen, George and Savage, Stefan and Seshan, Srinivasan and Voelker, Geoffrey M and Andersen, David G and Kaminsky, Michael and others},
-  booktitle={{CoNEXT}},
+  author={Liu, He and Mukerjee, Matthew K. and Li, Conglong and Feltman, Nicolas and Papen, George and Savage, Stefan and Seshan, Srinivasan and Voelker, Geoffrey M. and Andersen, David G. and Kaminsky, Michael and Porter, George and Snoeren, Alex C.},
+  booktitle={{Conference on Emerging Networking Experiments and Technologies (CoNEXT)}},
   year={2015}
 }
 
@@ -677,7 +677,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 
 @inproceedings{singh2015jupiter,
   title={{Jupiter Rising: A decade of Clos topologies and centralized control in Google's datacenter network}},
-  author={Singh, Arjun and Ong, Joon and Agarwal, Amit and Anderson, Glen and Armistead, Ashby and Bannon, Roy and Boving, Seb and Desai, Gaurav and Felderman, Bob and Germano, Paulie and others},
+  author={Singh, Arjun and Ong, Joon and Agarwal, Amit and Anderson, Glen and Armistead, Ashby and Bannon, Roy and Boving, Seb and Desai, Gaurav and Felderman, Bob and Germano, Paulie and Kanagala, Anand and Provost, Jeff and Simmons, Jason and Tanda, Eiichi and Wanderer, Jim and H\"{o}lzle, Urs and Stuart, Stephen and Vahdat, Amin},
   booktitle={SIGCOMM},
   year={2015}
 }
